processing speed analysis tool added

--- a/runtime/sample/makefile
+++ b/runtime/sample/makefile
@@ -8,11 +8,11 @@ OPENCV = -lopencv_highgui -lopencv_core -lopencv_imgproc -I/usr/include/opencv
 #
 #
 
-output:
+facefinder:
 	#
 	# Compiling face detection sample ...
 	#
-	$(CC) sample.c ../picort.c -lm $(OPENCV) -O3 -DQCUTOFF=3.0f -o exe
+	$(CC) sample.c ../picort.c -lm $(OPENCV) -O3 -DQCUTOFF=3.0f -o facefinder
 
 	#
 	# ---------------------------
@@ -20,4 +20,10 @@ output:
 	#
 	# Compiling rotation invariant face detection sample ...
 	#
-	$(CC) sample.c ../picorirt.c -lm $(OPENCV) -O3 -DQCUTOFF=8.0f -o exeri
+	$(CC) sample.c ../picorirt.c -lm $(OPENCV) -O3 -DQCUTOFF=8.0f -o rotfacefinder
+
+procspeed:
+	#
+	# Compiling processing speed tool ...
+	#
+	$(CC) getprocspeed.c ../picorirt.c -lm -lrt $(OPENCV) -O3 -o getprocspeed
