--- a/runtime/sample/makefile
+++ b/runtime/sample/makefile
@@ -12,7 +12,7 @@ facefinder:
 	#
 	# Compiling face detection sample ...
 	#
-	$(CC) sample.c ../picort.c -lm $(OPENCV) -O3 -DQCUTOFF=3.0f -o facefinder
+	$(CC) sample.c ../picort.c -lm $(OPENCV) -O3 -DQCUTOFF=3.0 -o facefinder
 
 	#
 	# ---------------------------
@@ -20,10 +20,10 @@ facefinder:
 	#
 	# Compiling rotation invariant face detection sample ...
 	#
-	$(CC) sample.c ../picorirt.c -lm $(OPENCV) -O3 -DQCUTOFF=8.0f -o rotfacefinder
+	$(CC) sample.c ../picorirt.c -lm $(OPENCV) -O3 -DQCUTOFF=8.0 -o rotfacefinder
 
 procspeed:
 	#
 	# Compiling processing speed tool ...
 	#
-	$(CC) getprocspeed.c ../picorirt.c -lm -lrt $(OPENCV) -O3 -o getprocspeed
+	$(CC) getprocspeed.c ../picort.c -lm -lrt $(OPENCV) -O3 -o getprocspeed
