--- a/runtime/samples/C/makefile
+++ b/runtime/samples/C/makefile
@@ -8,22 +8,14 @@ OPENCV = -lopencv_highgui -lopencv_core -lopencv_imgproc -I/usr/include/opencv
 #
 #
 
-facefinder:
+output:
 	#
 	# Compiling face detection sample ...
 	#
-	$(CC) sample.c ../../picort.c -lm $(OPENCV) -O3 -DQCUTOFF=3.0 -o facefinder
+	$(CC) sample.c -lm $(OPENCV) -O3 -DQCUTOFF=3.0 -o exe
 
-	#
-	# ---------------------------
-
-	#
-	# Compiling rotation invariant face detection sample ...
-	#
-	$(CC) sample.c ../../picorirt.c -lm $(OPENCV) -O3 -DQCUTOFF=8.0 -o rotfacefinder
-
-procspeed:
+utils:
 	#
 	# Compiling processing speed tool ...
 	#
-	$(CC) getprocspeed.c ../../picort.c -lm -lrt $(OPENCV) -O3 -o getprocspeed
+	$(CC) procspeed.c -lm -lrt $(OPENCV) -O3 -o procspeed
