--- a/runtime/samples/C/makefile
+++ b/runtime/samples/C/makefile
@@ -12,10 +12,4 @@ output:
 	#
 	# Compiling face detection sample ...
 	#
-	$(CC) sample.c -lm $(OPENCV) -O3 -DQCUTOFF=3.0 -o exe
-
-utils:
-	#
-	# Compiling processing speed tool ...
-	#
-	$(CC) procspeed.c -lm -lrt $(OPENCV) -O3 -o procspeed
+	$(CC) sample.c -lm -lrt $(OPENCV) -O3 -DQCUTOFF=3.0 -o exe
