--- a/rnt/sample/makefile
+++ b/rnt/sample/makefile
@@ -9,4 +9,4 @@ OPENCV = -lopencv_highgui -lopencv_core -lopencv_imgproc -I/usr/include/opencv
 #
 
 output:
-	$(CC) sample.c ../picornt.c -lrt $(OPENCV) -O3 -o pico
+	$(CC) sample.c ../picornt.c -lrt $(OPENCV) -o pico -O3
