compatibility with OpenCV 3

--- a/rnt/sample/makefile
+++ b/rnt/sample/makefile
@@ -2,11 +2,11 @@
 #
 #
 
-OPENCV = -lopencv_highgui -lopencv_core -lopencv_imgcodecs -lopencv_imgproc -lopencv_videoio
+OPENCV = -lopencv_highgui -lopencv_core -lopencv_imgcodecs -lopencv_imgproc -lopencv_videoio -I$(HOME)/anaconda3/include -L$(HOME)/anaconda3/lib
 
 #
 #
 #
 
 output:
-	$(CC) sample.c ../picornt.c -lrt $(OPENCV) -o pico -O3
+	g++ sample.c ../picornt.c -lrt $(OPENCV) -o pico -O3
